--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="image/svg+xml" rel="icon" href="img/logo.svg">
+  <link type="image/svg+xml" rel="shortcut icon" href="./img/site-icon-ya-logo.svg">
   <title>Yandex GO scooter</title>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -66,6 +66,8 @@
             <span class="price__before" aria-label="price before 3190₽" tabindex="0">3190₽</span>
           </span>
         </p>
+        <div class="main__infograph" aria-label="bright scooter logo with text on wheel" style="width: 354px; height: 309px;">
+        </div> 
         <button type="button" class="main__btn">
           <a target="_blank" href="https://go.yandex/ru_ru/lp/rides/scooter">Стать частью клуба</a>
         </button>
